ortho_config/tests/ui/invalid_cli_short.stderr
error: invalid `cli_short` '?': must be ASCII alnum
 --> tests/ui/invalid_cli_short.rs:7:5
  |
7 |     field: String,
  |     ^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/invalid_cli_short.rs:8:2
  |
8 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_cli_short.rs`
